# probcore

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
gensn/: __init__.py  distributions.py  flow.py  parameters.py  si.py  transforms.py  utils.py  variational.py
gensn/transforms/: invertible.py  surjective.py
notebooks/: TrainabledDistribution.ipynb  dequantization.ipynb  factorized_log_prob.ipynb  gensn_demo.ipynb
probcore/: distributions.py  flow.py  parameters.py  variational.py
tests/: test_distributions.py
